Html products were added

--- a/index.html
+++ b/index.html
@@ -8,10 +8,17 @@
 
     <!-- linked stylesheet below -->
     <link rel="stylesheet" href="css/style.css">
+    <h1>Savvy Books and Music</h1>
 </head>
     <body>
-
-
+<nav>
+  <ul>
+    <li> <a href="books.html"> Books</a></li>
+    <li><a href="music.html"> Music</a></li>
+  </ul>
+</nav>
+<div id="content"></div>
+<div id="books"></div>
         <!-- all HTML content goes above this line -->
         <!-- connected libraries -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
@@ -19,4 +26,9 @@
         <!-- connected custom scripts -->
         <script type="text/javascript" src="js/scripts.js"></script>
     </body>
+    <footer>  <ul>
+      <li> <a href="books.html"> Books</a></li>
+      <li><a href="music.html"> Music</a></li>
+      </ul>
+     </footer>
 </html>
