--- a/index.html
+++ b/index.html
@@ -11,6 +11,49 @@
 </head>
     <body>
 
+        <div id="book1">
+          <div class="id">
+              1
+            </div>
+          <div class="name">
+              "War and Peace"
+            </div>
+          <div class="author">
+              "Leo Tolstoy"
+            </div>
+          <div class="price">
+              1
+            </div>
+          <img src=
+            "https://upload.wikimedia.org/wikipedia/commons/a/af/Tolstoy_-_War_and_Peace_-_first_edition%2C_1869.jpg", alt= "War and Peace">
+          </img>
+          <ul class="selling_points">
+            <li>"Best book ever!"</li>
+            <li>"Too short!"</li>
+          </ul>
+        </div>
+
+        <div id="book2">
+          <div class="id">
+            2
+          </div>
+          <div class="name">
+            "All's Quiet on the Western Front"
+          </div>
+          <div class="author">
+            "Erich Remarque"
+          </div>
+          <div class="price">
+            2
+          </div>
+          <img src=
+             "https://upload.wikimedia.org/wikipedia/commons/thumb/c/c3/Remarque_Im_Westen_nichts_Neues_1929.jpg/330px-Remarque_Im_Westen_nichts_Neues_1929.jpg", alt="All's Quiet">
+          <ul class="selling_points">
+            <li>"Perfect summer read!"</li>
+            <li>"Action never stopped!"</li>
+          </ul>
+        </div>
+
 
         <!-- all HTML content goes above this line -->
         <!-- connected libraries -->
