book listings 1 2 html REV2

--- a/index.html
+++ b/index.html
@@ -16,20 +16,19 @@
               1
             </div>
           <div class="name">
-              "War and Peace"
+              War and Peace
             </div>
           <div class="author">
-              "Leo Tolstoy"
+              Leo Tolstoy
             </div>
           <div class="price">
               1
             </div>
-          <img src=
+          <img class="picture" src=
             "https://upload.wikimedia.org/wikipedia/commons/a/af/Tolstoy_-_War_and_Peace_-_first_edition%2C_1869.jpg", alt= "War and Peace">
-          </img>
           <ul class="selling_points">
-            <li>"Best book ever!"</li>
-            <li>"Too short!"</li>
+            <li>Best book ever!</li>
+            <li>Too short!</li>
           </ul>
         </div>
 
@@ -38,19 +37,19 @@
             2
           </div>
           <div class="name">
-            "All's Quiet on the Western Front"
+            All's Quiet on the Western Front
           </div>
           <div class="author">
-            "Erich Remarque"
+            Erich Remarque
           </div>
           <div class="price">
             2
           </div>
-          <img src=
+          <img class="picture" src=
              "https://upload.wikimedia.org/wikipedia/commons/thumb/c/c3/Remarque_Im_Westen_nichts_Neues_1929.jpg/330px-Remarque_Im_Westen_nichts_Neues_1929.jpg", alt="All's Quiet">
           <ul class="selling_points">
-            <li>"Perfect summer read!"</li>
-            <li>"Action never stopped!"</li>
+            <li>Perfect summer read!</li>
+            <li>Action never stopped!</li>
           </ul>
         </div>
 
