book listings 1 2 html REV3

--- a/index.html
+++ b/index.html
@@ -14,18 +14,18 @@
         <div id="book1">
           <div class="id">
               1
-            </div>
+          </div>
           <div class="name">
               War and Peace
-            </div>
+          </div>
           <div class="author">
               Leo Tolstoy
-            </div>
+          </div>
           <div class="price">
               1
-            </div>
+          </div>
           <img class="picture" src=
-            "https://upload.wikimedia.org/wikipedia/commons/a/af/Tolstoy_-_War_and_Peace_-_first_edition%2C_1869.jpg", alt= "War and Peace">
+            "https://upload.wikimedia.org/wikipedia/commons/a/af/Tolstoy_-_War_and_Peace_-_first_edition%2C_1869.jpg" alt= "War and Peace">
           <ul class="selling_points">
             <li>Best book ever!</li>
             <li>Too short!</li>
@@ -46,7 +46,7 @@
             2
           </div>
           <img class="picture" src=
-             "https://upload.wikimedia.org/wikipedia/commons/thumb/c/c3/Remarque_Im_Westen_nichts_Neues_1929.jpg/330px-Remarque_Im_Westen_nichts_Neues_1929.jpg", alt="All's Quiet">
+             "https://upload.wikimedia.org/wikipedia/commons/thumb/c/c3/Remarque_Im_Westen_nichts_Neues_1929.jpg/330px-Remarque_Im_Westen_nichts_Neues_1929.jpg" alt="All's Quiet">
           <ul class="selling_points">
             <li>Perfect summer read!</li>
             <li>Action never stopped!</li>
