--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
               </div>
               <br> <br>
 
-              <div>
+              <div id= "submit">
                   <section>
                       <input type="submit" value="Submit">
                   </section>
