Finish form implementation

--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
           <div>
               <section>
                   <br> <br>
-                  <input type="text" name="name" placeholder="Name" size="50"  required autofocus>
+                  <input type="text" name="name" placeholder="Name"autofocus>
                   <br> <br>
-                  <input type="text" name="author" placeholder="Author" size="50" required>
+                  <input type="text" name="author" placeholder="Author">
                   <br> <br>
-                  <input type="text" name="picture_url_url" placeholder="Insert Your picture_url URL Here" size="50" required>
+                  <input type="text" name="picture_url" placeholder="Insert Your picture_url URL Here">
                   <br> <br>
-                  <input type="text" name="price" placeholder="Price" size="10" required>
+                  <input type="text" name="price" placeholder="Price">
                   <br> <br>
               </section>
           </div>
